# InvenTrack

./: .gitignore  CMakeLists.txt  InvenTrack.cpp  Inventory.db  MakeDatabase.zsh  MakeInventory.sql  Makefile  README.md  ResetDatabase.bash  ResetDatabase.zsh  TestDataInventory.sql  TestInvenTrack.bash  TestInvenTrack.zsh  scanin.cpp  scanout.cpp
